public/styles/styles.css
html,
body {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    font-family: Arial, sans-serif;
    background-color: #f8f8f8;
    color: #151515;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    padding: 20px;
}

header h1 {
    margin: 0;
    font-size: 36px;
    color: #4b9cd3;
}

nav {
    padding: 10px;
    text-align: center;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

nav ul li {
    display: inline-block;
    margin: 0px 10px;
}

nav ul li a {
    color: #13294b;
    text-decoration: none;
    padding: 5px 10px;
    border-radius: 5px;
    transition: 0.3s ease;
}

nav ul li a:hover {
    background-color: rgba(19, 41, 75, 0.1);
}

main {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    padding: 20px;
    text-align: center;
}

p, label {
    font-size: 18px;
    line-height: 1.5;
}

section p {
    margin: 0;
}

footer {
    background-color: #13294b;
    color: #ffffff;
    padding: 10px;
    text-align: center;
}

